# winlose

./: .gitignore  CMakeLists.txt  build.sh  generateBindings.sh
binding/: bind.bat  binding.gyp  index.js  package.json
idl/: winlose.djinni
nodejs/: NJSWinlose.cpp  NJSWinlose.h  Winlose_nodejs.cpp
nodejs-binding/: NJSWinloseCpp.cpp  NJSWinloseCpp.hpp  NJSWinloseNodeJS.cpp  NJSWinloseNodeJS.hpp  winlose.cpp  winlose_doc.js
src/: CMakeLists.txt  Winlose.cpp  Winlose.h  WinloseGlobal.cpp  WinloseGlobal.h  WinloseStruct.cpp  WinloseStruct.h  winlose_export.h
src/api/: Winlose.hpp  WinloseNodeJS.hpp
